# moveit_kinematics_tests

./: .travis.yml  README.md  install.rosinstall
kinematics_base_test/: CMakeLists.txt  package.xml
kinematics_base_test/launch/: test_ikfast_plugin.launch  test_ikfast_w_redundancy_plugin.launch  test_kdl_plugin.launch  test_kinematics_plugin.launch  test_pr2_kinematics_plugin.launch
kinematics_base_test/src/: test_ikfast_plugin.cpp  test_kinematics_as_plugin.cpp  test_kinematics_plugin.cpp
kinematics_tests_support/: CMakeLists.txt  package.xml
kinematics_tests_support/urdf/: kr210l150.urdf  sia20d.urdf
kuka_kr210_manipulator_ik_plugin/: CMakeLists.txt  kuka_kr210_ikfast_manipulator.cpp  kuka_kr210_manipulator_moveit_ikfast_plugin_description.xml  package.xml  test_kuka_kr210_manipulator_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
kuka_kr210_manipulator_ik_plugin/src/: kuka_kr210_manipulator_ikfast_moveit_plugin.cpp  test_kuka_kr210_manipulator_ikfast_moveit_plugin.cpp  test_kuka_kr210_manipulator_ikfast_solver.cpp
kuka_kr210_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_kr210_moveit_config/config/: kinematics.yaml  kuka_kr210.srdf
kuka_kr210_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
motoman_mh5_ikfast_manipulator_plugin/: CMakeLists.txt
motoman_mh5_ikfast_manipulator_plugin/src/: motoman_mh5_manipulator_ikfast_solver.cpp
motoman_mh5_ikfast_manipulator_plugin/test/: compute  test.cpp
motoman_sia20d_ikfast_manipulator_plugin/: CMakeLists.txt  package.xml  test_motoman_sia20d_manipulator_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
motoman_sia20d_ikfast_manipulator_plugin/config/: ikfast_sia20d_manipulator.cpp
motoman_sia20d_ikfast_manipulator_plugin/include/: ikfast.h
motoman_sia20d_ikfast_manipulator_plugin/src/: motoman_sia20d_manipulator_ikfast_moveit_plugin.cpp  test_motoman_sia20d_manipulator_ikfast_moveit_plugin.cpp  (+1 more)
test_kr210_moveit_config/: CMakeLists.txt  package.xml
test_motoman_sia20d_moveit_config/: CMakeLists.txt
(+15 files in other folders)
