<?xml version="1.0"?>
<package>
  <name>kinematics_tests_support</name>
  <version>0.0.0</version>
  <description>The kinematics_tests_support package</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>BSD</license>
  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
